# rust-protobuf-example

./: Cargo.toml  build.rs
proto/: gpspoint.proto
src/: lib.rs
