[package]
name = "protobuf-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protobufs"
path = "src/lib.rs"

[dependencies]
prost = "^0.12.1"
rustc-hash = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tonic = {version = "^0.11.0"}
bytes = "^1.4.0"
hyper = "^1.1.0"
cargo-deny = "^0.14.3"

[build-dependencies]
prost-build = "^0.12.1"
tonic-build = "^0.11.0"
